--- a/master.scss
+++ b/master.scss
@@ -27,8 +27,9 @@ ltblue:#3f71f1,
 navy: navy,
 dkblue:#18223b,
 ltgreen:#79e286,
-pastgreen: #a6b696,
+transGreen: rgba(#32b384, 0.78),
 transPastGreen: rgba(#a6b696, 0.66),
+pastgreen: #a6b696,
 pastred: #c29d9d,
 dkred:#441f1d,
 ltred:#eb473d,
