--- a/master.css
+++ b/master.css
@@ -108,28 +108,6 @@ div.entry {
   div.entry hr {
     width: 70%;
     margin: 5vh auto; }
-  div.entry h4 {
-    display: inline-block;
-    float: left; }
-  div.entry h3 {
-    text-align: center; }
-    div.entry h3.subtitle {
-      text-align: left; }
-  div.entry h2.date {
-    text-align: right;
-    font-size: 1vw;
-    font-family: "Raleway", Sans-Serif; }
-  div.entry ol a:hover {
-    color: skyblue; }
-  div.entry ol.todo li {
-    list-style: none; }
-  div.entry ol.done li list {
-    style: decimal; }
-  div.entry .done ol li li {
-    padding: baseline;
-    font-weight: bold; }
-  div.entry .done ol li p {
-    margin: auto; }
 
 /* width classes */
 .w10 {
@@ -327,9 +305,8 @@ h4 a {
   margin: auto;
   background-color: #758a88;
   border: 1px solid brown;
-  box-shadow: inset 2px 2px 10px 2px black; }
-  .framed1 pre {
-    color: #a6b696; }
+  box-shadow: inset 2px 2px 10px 2px black;
+  color: #bdbdbd; }
 
 .fLeft {
   float: left; }
@@ -401,11 +378,35 @@ div.journal-entry {
   font-size: 1.4vw;
   overflow: auto;
   text-shadow: 0 2px 3px #f1e8ce; }
+  div.journal-entry h4 {
+    display: inline-block;
+    float: left; }
+  div.journal-entry h3 {
+    text-align: center; }
+    div.journal-entry h3.subtitle {
+      text-align: left; }
+  div.journal-entry h2.date {
+    text-align: right;
+    font-size: 1vw;
+    font-family: "Raleway", Sans-Serif; }
+  div.journal-entry ol a:hover {
+    color: skyblue; }
+  div.journal-entry ol.todo li {
+    list-style: none; }
+  div.journal-entry ol.done li list {
+    style: decimal; }
+  div.journal-entry .done ol li li {
+    padding: baseline;
+    font-weight: bold; }
+  div.journal-entry .done ol li p {
+    margin: auto; }
 
 div.ecma-entry {
-  border: 1px solid #f5facf;
   height: 80vh;
   background-color: #bdbdbd;
+  border: 1px solid #945706;
+  border-radius: 2%;
+  box-shadow: -10px 10px 10px 0px rgba(0, 0, 0, 0.7) inset;
   font-family: "Code Source Pro", monospace;
   font-size: 2vw;
   overflow: auto;
