--- a/master.scss
+++ b/master.scss
@@ -16,6 +16,7 @@ mango:#ebb861,
 sand:#d0b588,
 orange:#f28b02,
 dkorange: #945706,
+
 dkgrey:#575757,
 ltgrey:#bdbdbd,
 ivr:#e6d8cc,
@@ -27,6 +28,7 @@ ltblue:#3f71f1,
 navy: navy,
 dkblue:#18223b,
 ltgreen:#79e286,
+pastOlive: #758a88,
 transGreen: rgba(#32b384, 0.78),
 transPastGreen: rgba(#a6b696, 0.66),
 pastgreen: #a6b696,
