--- a/scss/journal/journal.scss
+++ b/scss/journal/journal.scss
@@ -19,4 +19,69 @@ div.journal-entry {
   text: {
     shadow: 0 2px 3px map-get($colors, txtShadow);
   }
+
+    h4 {
+      display: inline-block;
+      float: left;
+    }
+
+    h3 {
+      text: {
+        align: center;
+      }
+
+      &.subtitle {
+        text: {
+          align: left;
+        }
+      }
+    }
+
+    h2.date {
+      text: {
+        align: right;
+      }
+      font: {
+        size: 1vw;
+        family: map-get($fonts, Clean);
+      }
+    }
+
+    ol {
+      & a {
+        // color: purple;
+        &:hover {
+          color: skyblue;
+        }
+      }
+    }
+
+    ol.todo {
+      & li {
+        list: {
+          style: none;
+        }
+      }
+    }
+
+    ol.done {
+      & li {
+        list {
+          style: decimal;
+        }
+      }
+    }
+
+    .done ol li {
+      & li {
+        padding: baseline;
+        font: {
+          weight: bold;
+        }
+      }
+
+      p {
+        margin: auto;
+      }
+}
 }
