--- a/master.scss
+++ b/master.scss
@@ -16,7 +16,7 @@ mango:#ebb861,
 sand:#d0b588,
 orange:#f28b02,
 dkorange: #945706,
-
+mutedOrange: #9a854e,
 dkgrey:#575757,
 ltgrey:#bdbdbd,
 ivr:#e6d8cc,
@@ -26,6 +26,7 @@ trim: #f5facf,
 txtShadow: #f1e8ce,
 ltblue:#3f71f1,
 navy: navy,
+mutedBlue:#3f6a96,
 dkblue:#18223b,
 ltgreen:#79e286,
 pastOlive: #758a88,
