--- a/scss/ecma/ecma.scss
+++ b/scss/ecma/ecma.scss
@@ -12,20 +12,20 @@ box-shadow: -10px 10px 10px 0px rgba(0, 0, 0, 0.7) inset;
   }
 
   .prettyprint {
-    font-size: 1.5vw;
     background-color: #445e5e;
     padding: 2vh 2vw;
   }
   overflow: auto;
   position: relative;
 
-  div {
-    margin: {
-      // top: $baseline;
-      bottom: $baseline * 4;
-    }
-  }
+
   pre {
     background-color: map-get($colors, deep)
+  }
+}
+div.ltbg {
+  padding: baseline baseline;
+  p {
+    margin: $baseline;
   }
 }
