--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -142,7 +142,7 @@ div.entry {
 
 pre.prettyprint {
   font: {
-    size: 1.3em;
+    size: 1vw;
   }
   background-color: rgba(242, 219, 150, 0.89);
 }
@@ -472,7 +472,7 @@ h4 a {
 }
 
 .sm {
-  font-size: $baseline / 2;
+  font-size: $baseline / 1.1;
 }
 
 .caption-box {
