--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -425,6 +425,20 @@ h4 a {
     size: 1.4vw;
   }
 }
+.simple-frame2 {
+  border: 1px solid maroon;
+  box-shadow: 1px 1px 4px 1px map-get($colors, dkbg);
+  background-color: map-get($colors, mustard);
+  font-family: Trebuchet, sans-serif;
+  font-weight: 400;
+  padding: 1vh 2vw;
+  font: {
+    weight: 400;
+    family: Trebuchet, Sans-Serif;
+    size: 1.4vw;
+  }
+}
+
 .framed1 {
   padding: 2%;
   font: {
