--- a/master.scss
+++ b/master.scss
@@ -54,3 +54,4 @@ reddrk: #410211);
 @import 'scss/home/home';
 @import 'scss/angular/angular';
 @import 'scss/node/node';
+@import 'scss/colors/colors';
