--- a/scss/misc/misc.scss
+++ b/scss/misc/misc.scss
@@ -5,4 +5,7 @@ div.misc-entry {
 div.misc-entry {
   background-color: map-get($colors, dkorange);
   // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
+  overflow: auto;
+  height: 80vh;
+  border: 1px solid map-get($colors, ivr);
 }
