--- a/scss/node/node.scss
+++ b/scss/node/node.scss
@@ -2,5 +2,7 @@ div.node-entry {
   background-color: map-get($colors, pastOlive);
   border: 1px solid white;
   color: white;
+  overflow: auto;
+  height: 80vh;
   // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
 }
