--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -447,3 +447,16 @@ pre {
 .pAbs {
   position: absolute;
 }
+
+/* Images side-by-side */
+
+.neighbors-container {
+  text-align: center;
+}
+
+.neighbors-item {
+  display: inline-block;
+}
+img.neighbors-item {
+  height: 12vw;
+}
