--- a/master.scss
+++ b/master.scss
@@ -55,4 +55,5 @@ reddrk: #410211);
 @import 'scss/home/home';
 @import 'scss/angular/angular';
 @import 'scss/node/node';
+@import 'scss/es6/es6';
 @import 'scss/colors/colors';
