adds svg state and link styles

--- a/master.scss
+++ b/master.scss
@@ -56,4 +56,5 @@ reddrk: #410211);
 @import 'scss/angular/angular';
 @import 'scss/node/node';
 @import 'scss/es6/es6';
+@import 'scss/svg/svg';
 @import 'scss/colors/colors';
