--- a/master.css
+++ b/master.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* SASS START:
 sass --watch master.scss:master.css
 */
@@ -34,6 +35,22 @@ body {
     width: 100%;
     height: 100%;
     filter: contrast(175%) brightness(23%); }
+
+/* links */
+a:active,
+a:focus,
+a:link,
+a:visited,
+a {
+  margin: 2vh auto;
+  color: #e6d8cc;
+  text-decoration: none; }
+
+a::before {
+  content: "📌"; }
+
+a:hover {
+  color: #79e286; }
 
 /*90 degree rot state-name*/
 aside {
@@ -185,6 +202,9 @@ pre {
   .navlink-container a[ui-sref]:hover {
     color: ivory; }
 
+a[ui-sref]::before {
+  content: none; }
+
 nav.navbar {
   background-color: #3f6a96;
   position: static;
@@ -217,16 +237,6 @@ a[ui-sref] {
 a[ui-sref]:hover {
   color: #9a854e;
   transition: color 1s; }
-
-a:active,
-a:focus,
-a:hover,
-a:link,
-a:visited,
-h4 a {
-  margin: 2vh auto;
-  color: ivr;
-  text-decoration-color: ivr; }
 
 .underline {
   text-decoration: underline; }
@@ -389,8 +399,6 @@ div.journal-entry {
     text-align: right;
     font-size: 1vw;
     font-family: "Raleway", Sans-Serif; }
-  div.journal-entry ol a:hover {
-    color: skyblue; }
   div.journal-entry ol.todo li {
     list-style: none; }
   div.journal-entry ol.done li list {
@@ -400,6 +408,21 @@ div.journal-entry {
     font-weight: bold; }
   div.journal-entry .done ol li p {
     margin: auto; }
+
+a:active,
+a:focus,
+a:link,
+a:visited,
+a {
+  margin: 2vh auto;
+  color: #3f71f1;
+  text-decoration: none; }
+
+a::before {
+  content: "📌"; }
+
+a:hover {
+  color: #79e286; }
 
 div.ecma-entry {
   height: 80vh;
@@ -537,6 +560,12 @@ div.es6-entry {
 
 div.es6-entry {
   background-color: #945706;
+  overflow: auto;
+  height: 80vh;
+  border: 1px solid #e6d8cc; }
+
+div.svg-entry {
+  background-color: rgba(45, 44, 44, 0.7);
   overflow: auto;
   height: 80vh;
   border: 1px solid #e6d8cc; }
