--- a/master.css
+++ b/master.css
@@ -148,27 +148,27 @@ pre.prettyprint {
   margin: 1%;
   padding: 1%; }
 
-.code-questions {
+.code-question-med {
   width: 80vw;
   color: #e6d8cc;
   border: 1px solid white;
-  line-height: 2.5em;
+  line-height: .9em;
   font-size: 0.8em;
   font-weight: 400;
   font-family: "Raleway", Sans-Serif;
   background-color: rgba(0, 0, 0, 0.8);
-  padding: 1.5vw;
+  padding: 1%;
   margin: auto; }
-  .code-questions .middle {
-    margin-left: 25%; }
 
-.code-questions2 {
+.code-question-compact {
   position: relative;
   border: 1px solid ivory;
-  background: #a6b696; }
+  background: #a6b696;
+  line-height: 1em; }
 
-.code-questions3 {
+.code-question-tall {
   position: relative;
+  line-height: 1vw;
   border: 1px solid lightgreen;
   background: #c29d9d; }
 
@@ -361,16 +361,17 @@ img.neighbors-item {
   background-color: #a6b696;
   border: 1px solid #f5facf;
   height: 80vh;
-  font-family: "Comfortaa", cursive;
-  font-size: 2vw;
   overflow: auto;
-  position: relative; }
+  position: relative;
+  font-family: "Comfortaa", cursive;
+  font-size: 2vw; }
   .jq-entry .prettyprint {
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     background-color: #445e5e;
     padding: 2vh 2vw; }
   .jq-entry div {
-    margin-bottom: 4vw;
+    margin-bottom: 0.5vw;
+    margin-top: 0;
     font-family: "Comfortaa", cursive;
     font-size: 2vw; }
 
@@ -570,7 +571,19 @@ div.svg-entry {
   box-shadow: inset 0px 0px 42px 2px black;
   overflow: auto;
   height: 80vh;
-  border: 1px solid #e6d8cc; }
+  border: 1px solid #e6d8cc;
+  position: relative; }
+
+.top-right-box {
+  border: 1px solid maroon;
+  background-color: rgba(199, 190, 132, 0.5);
+  font-size: .8em;
+  position: absolute;
+  top: 0;
+  right: 0; }
+
+.box-border {
+  border: 1px solid wheat; }
 
 /* color classes */
 .mango {
