--- a/scss/colors/colors.scss
+++ b/scss/colors/colors.scss
@@ -6,6 +6,9 @@
 .sand {
   color: map-get($colors, sand);
 }
+.mutedBlue {
+  color: map-get($colors, mutedBlue);
+}
 .mutedOrange {
   color: map-get($colors, mutedOrange);
 }
