--- a/scss/es6/es6.scss
+++ b/scss/es6/es6.scss
@@ -1,11 +1,13 @@
 div.es6-entry {
-  background-color: map-get($colors, trim);
-  // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
-}
-div.es6-entry {
   background-color: map-get($colors, dkorange);
   // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
   overflow: auto;
   height: 80vh;
   border: 1px solid map-get($colors, ivr);
+}
+.chtitle {
+  color: map-get($colors, sand);
+}
+.prettyprint {
+  border: 1px solid burlywood;
 }
